<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFEF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TVAtmPTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txt_title"
        android:textAlignment="center"
        android:textColor="#93431A"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVDescription"
        android:layout_width="354dp"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_description"
        android:textAlignment="viewStart"
        android:textColor="#93431A"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVAtmPTitle" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVmultiply" />

    <TextView
        android:id="@+id/TVproblem"
        android:layout_width="347dp"
        android:layout_height="123dp"
        android:layout_marginTop="68dp"
        android:text="@string/txt_problem"
        android:textColor="#93431A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVDescription" />

    <EditText
        android:id="@+id/ETLength"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:autofillHints="Length"
        android:ems="10"
        android:hint="@string/txt_length"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#93431A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVproblem" />

    <EditText
        android:id="@+id/ETWidth"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="116dp"
        android:autofillHints="Width"
        android:ems="10"
        android:hint="@string/txt_width"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#93431A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/TVmultiply"
        app:layout_constraintTop_toBottomOf="@+id/TVproblem" />

    <TextView
        android:id="@+id/TVmultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="116dp"
        android:text="@string/txt_multiply"
        android:textColor="#93431A"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/ETLength"
        app:layout_constraintTop_toBottomOf="@+id/TVproblem" />

    <TextView
        android:id="@+id/TVmeter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/txt_meters1"
        android:textAlignment="center"
        android:textColor="#93431A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETLength" />

    <TextView
        android:id="@+id/TVmeter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="56dp"
        android:text="@string/txt_meters2"
        android:textAlignment="center"
        android:textColor="#93431A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETWidth" />

    <EditText
        android:id="@+id/ETAtm"
        android:layout_width="216dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Atmosphere"
        android:ems="10"
        android:hint="@string/txt_atmosphere"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVproblem" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1 - 5"
        android:textColor="#93431A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETAtm" />
</androidx.constraintlayout.widget.ConstraintLayout>