<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFEF"
    tools:context=".Result5ATM">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/Result"
                android:textAlignment="center"
                android:textColor="#93431A"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="156dp"
                android:layout_marginTop="80dp"
                android:text="@string/btn_return" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="156dp"
                android:text="@string/txt_atmForReference"
                android:textColor="#93431A"
                android:textSize="24sp"
                android:translationX="120dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_5atmReference"
                android:textAlignment="center"
                android:textColor="#93431A"
                android:textSize="24sp"
                android:translationX="60dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="382dp"
                android:layout_height="263dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/elephant"
                android:translationX="15dp"
                app:srcCompat="@drawable/elephant" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>