<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFEF"
    tools:context=".Result3ATM">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/Result"
                android:textAlignment="center"
                android:textColor="#93431A"
                android:textSize="32sp" />

            <Button
                android:id="@+id/btn_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="156dp"
                android:layout_marginTop="80dp"
                android:text="@string/btn_return" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="132dp"
                android:text="@string/txt_atmForReference"
                android:textColor="#93431A"
                android:textSize="24sp"
                android:translationX="120dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_3atmReference"
                android:textAlignment="center"
                android:textColor="#93431A"
                android:textSize="24sp"
                android:translationX="80dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="413dp"
                android:layout_height="356dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/humpbackwhale"
                app:srcCompat="@drawable/humpbackwhale" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>